--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,14 @@ php:
   - 5.3
   - 5.4
   - 5.5
+  - hhvm
 
 before_script:
-  - curl -s http://getcomposer.org/installer | php
-  - php composer.phar install --dev
+  - travis_retry composer self-update
+  - travis_retry composer install --no-interaction --prefer-source --dev
 
-script: phpunit
+script: 
+  - phpunit
+
+after_script:
+  - php vendor/bin/coveralls -v
