--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "illuminate/support": "4.0.x",
         "illuminate/cache": "4.0.x",
         "illuminate/config": "4.0.x",
-        "hipchat/hipchat-php": "dev-master"
+        "hipchat/hipchat-php": ">=1.0.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
