--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,10 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "illuminate/support": "4.0.x",
-        "illuminate/cache": "4.0.x",
-        "illuminate/config": "4.0.x",
-        "hipchat/hipchat-php": ">=1.0.0"
+        "illuminate/support": "4.*",
+        "illuminate/cache": "4.*",
+        "illuminate/config": "4.*",
+        "hipchat/hipchat-php": "1.*"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
@@ -25,7 +25,7 @@
         "squizlabs/php_codesniffer": "~1.5",
         "phpunit/php-code-coverage": "~2.0",
         "satooshi/php-coveralls": "dev-master",       
-        "illuminate/console": "4.0.x"
+        "illuminate/console": "4.*"
     },     
     "autoload": {
         "psr-4": {
